--- a/src/app/mersham-n/mersham-n.component.html
+++ b/src/app/mersham-n/mersham-n.component.html
@@ -841,7 +841,7 @@
                             </button>
                             &nbsp; &nbsp; &nbsp;
                             <button
-                                class="mt-32"
+                                class="mt-32 d-none"
                                 type="button"
                                 data-id="{{ this.PresRowIdVal }}"
                                 (click)="copyRowPres($event)"
