--- a/src/app/hospital-bi-dashboard/grouped-bar-chart2/grouped-bar-chart2.component.html
+++ b/src/app/hospital-bi-dashboard/grouped-bar-chart2/grouped-bar-chart2.component.html
@@ -1,5 +1,5 @@
-<h4 *ngIf="!percent" class="text-right mr-4">במספרים</h4>
-<h4 *ngIf="percent" class="text-right mr-4">באחוזים</h4>
+<!-- <h4 *ngIf="!percent" class="text-right mr-4">במספרים</h4>
+<h4 *ngIf="percent" class="text-right mr-4">באחוזים</h4> -->
 <google-chart #chart
    [type]="type"
    [data]="data"
