--- a/src/app/mersham-n/mersham-n.component.html
+++ b/src/app/mersham-n/mersham-n.component.html
@@ -841,9 +841,9 @@
                             </button>
                             &nbsp; &nbsp; &nbsp;
                             <button
-                                class="mt-32 d-none"
+                                class="mt-32"
                                 type="button"
-                                data-id="{{ this.PresRowIdVal }}"
+                                data-id="{{ this.ParentRowId }}"
                                 (click)="copyRowPres($event)"
                                 mat-raised-button
                                 color="yello"
@@ -954,9 +954,10 @@
                         >
                             <mat-label>פרוטוקול</mat-label>
                             <mat-select (selectionChange)="protocolChanged($event)">
+                                <input class="fixd-me" (keyup)="onSearchProtocol($event.target.value)">
                                 <mat-option
                                     *ngFor="
-                                        let Protocol of Protocols
+                                        let Protocol of searchProtocols
                                     "
                                     [value]="Protocol"
                                 >
@@ -1098,7 +1099,22 @@
                     </div>
                 </div>
                 <div class="row">
-                    
+                    <div class="col">
+                        <div class="form-group">
+                            <mat-form-field floatLabel="always">
+                                <input
+                                    matInput
+                                    id="diagnosis"
+                                    autocomplete="off"
+                                    class="form-control"
+                                    placeholder="אבחנה"
+                                    formControlName="diagnosisVal"
+                                    type="text"
+                                 
+                                />
+                            </mat-form-field>
+                        </div>
+                    </div>
                     <div class="col">
                         <div class="form-group">
                             <mat-form-field floatLabel="always">
@@ -1114,7 +1130,7 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col d-none">
                         <div class="form-group">
                             <mat-form-field floatLabel="always">
                                 <input
@@ -1163,24 +1179,6 @@
                                     [for]="takedateIN"
                                 ></mat-datepicker-toggle>
                                 <mat-datepicker #takedateIN></mat-datepicker>
-                            </mat-form-field>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <mat-form-field floatLabel="always">
-                                <textarea
-                                    matInput
-                                    id="diagnosis"
-                                    autocomplete="off"
-                                    class="form-control"
-                                    placeholder="אבחנה"
-                                    formControlName="diagnosisVal"
-                                    type="text"
-                                    rows="5"
-                                ></textarea>
                             </mat-form-field>
                         </div>
                     </div>
@@ -2182,7 +2180,17 @@
                 </div>
             </div>
             <div class="row">
-                
+                <div class="col">
+                    
+                    <div class="form-group">
+                        <label>אבחנה</label>
+                        <span class="form-control">{{
+                            printForm.diagnosisVal
+                        }}</span>
+                        
+                    </div>
+                   
+                </div>
                 <div class="col">
                     <div class="form-group">
                         <label>פרוטוקול טיפול</label>
@@ -2191,7 +2199,7 @@
                         }}</span>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col d-none">
                     <div class="form-group">
                         <label>תדירות</label>
                         <span class="form-control">{{
@@ -2215,18 +2223,7 @@
                         }}</span>
                     </div>
                 </div>
-            </div>
-            <div class="row text-right" dir="rtl">
-                <div class="col">
-                    <label>אבחנה</label>
-                    <div class="form-group">
-                        
-                        <p class="form-control text">{{
-                            printForm.diagnosisVal
-                        }}</p>
-                    </div>
-                   
-                </div>
+
             </div>
         </div>
         <!-- <div class="modal-footer text-left ">
