--- a/src/app/hospital-bi-dashboard/grouped-bar-chart-release/grouped-bar-chart-release.component.html
+++ b/src/app/hospital-bi-dashboard/grouped-bar-chart-release/grouped-bar-chart-release.component.html
@@ -1,4 +1,5 @@
 <mat-spinner *ngIf="loader"></mat-spinner>
+<h3 class="text-right mr-4" *ngIf="departParam == '6'"><b>זמן מהקבלה במיון לאשפוז</b></h3>
 <h3 class="text-right mr-4"><b>{{_averageAfter}}</b></h3>
 <h3 class="text-right mr-4"><b>{{_averageBefore}}</b></h3>
 <!-- <h4 *ngIf="!percent" class="text-right mr-4">הסינון במספרים </h4>
