--- a/src/app/maternity/maternity.component.html
+++ b/src/app/maternity/maternity.component.html
@@ -10,13 +10,8 @@
                                 <div class="col">
                                     <div class="form-group">
                                         <mat-form-field>
-                                            <input
-                                                matInput
-                                                autocomplete="off"
-                                                placeholder="חפש"
-                                                [(ngModel)]="fliterVal"
-                                                name="fliterVal"
-                                            />
+                                            <input matInput autocomplete="off" placeholder="חפש" [(ngModel)]="fliterVal"
+                                                name="fliterVal" />
                                         </mat-form-field>
                                     </div>
                                 </div>
@@ -25,27 +20,17 @@
                                         <mat-form-field>
                                             <mat-label>מצב</mat-label>
                                             <mat-select [(value)]="activeOrNot">
-                                                <mat-option value="-1"
-                                                    >הכל</mat-option
-                                                >
-                                                <mat-option value="1"
-                                                    >פעיל</mat-option
-                                                >
-                                                <mat-option value="0"
-                                                    >לא פעיל</mat-option
-                                                >
+                                                <mat-option value="-1">הכל</mat-option>
+                                                <mat-option value="1">פעיל</mat-option>
+                                                <mat-option value="0">לא פעיל</mat-option>
                                             </mat-select>
                                         </mat-form-field>
                                     </div>
                                 </div>
                             </div>
 
-                            <button
-                                mat-raised-button
-                                type="submit"
-                                class="btn btn-primary btn-raised"
-                                (click)="getReport($event)"
-                            >
+                            <button mat-raised-button type="submit" class="btn btn-primary btn-raised"
+                                (click)="getReport($event)">
                                 חפש
                             </button>
                         </form>
@@ -64,11 +49,7 @@
                         <!-- <mat-form-field>
                                 <input matInput (keyup)="applyFilter($event.target.value)" placeholder="חפש">
                             </mat-form-field> -->
-                        <table
-                            class="table"
-                            mat-table
-                            [dataSource]="dataSource"
-                        >
+                        <table class="table" mat-table [dataSource]="dataSource">
                             <ng-container matColumnDef="RowID">
                                 <th mat-header-cell *matHeaderCellDef>
                                     מס' פרויקט
@@ -81,27 +62,15 @@
                                 <th mat-header-cell *matHeaderCellDef>
                                     מזהה פרויקט
                                 </th>
-                                <td
-                                    mat-cell
-                                    *matCellDef="let element"
-                                    class="text-center"
-                                >
+                                <td mat-cell *matCellDef="let element" class="text-center">
                                     {{ element.MaternityNumber }}
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="MaternityName">
-                                <th
-                                    mat-header-cell
-                                    *matHeaderCellDef
-                                    width="160"
-                                >
+                                <th mat-header-cell *matHeaderCellDef width="160">
                                     שם פרויקט
                                 </th>
-                                <td
-                                    mat-cell
-                                    *matCellDef="let element"
-                                    class="text-center"
-                                >
+                                <td mat-cell *matCellDef="let element" class="text-center">
                                     {{ element.MaternityName }}
                                 </td>
                             </ng-container>
@@ -117,34 +86,25 @@
                                 <th mat-header-cell *matHeaderCellDef>מצב</th>
                                 <td mat-cell *matCellDef="let element">
                                     {{
-                                        element.MaternityStatus == 1
-                                            ? "פעיל"
-                                            : "לא פעיל"
+                                    element.MaternityStatus == 1
+                                    ? "פעיל"
+                                    : "לא פעיל"
                                     }}
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="CLICK">
-                                <th
-                                    mat-header-cell
-                                    *matHeaderCellDef
-                                    width="50"
-                                >
+                                <th mat-header-cell *matHeaderCellDef width="50">
                                     עריכה
                                 </th>
                                 <td mat-cell *matCellDef="let element">
                                     <div class="example-button-container">
-                                        <button
-                                            (click)="
+                                        <button (click)="
                                                 editRow(
                                                     maternityModal,
                                                     'maternity',
                                                     element
-                                                )
-                                            "
-                                            class="row-data"
-                                            mat-mini-fab
-                                            color="primary"
-                                        >
+                                                ); getParentProjects();
+                                            " class="row-data" mat-mini-fab color="primary">
                                             <mat-icon>create</mat-icon>
                                         </button>
                                     </div>
@@ -152,112 +112,64 @@
                             </ng-container>
 
                             <ng-container matColumnDef="CLICK_PATIENT">
-                                <th
-                                    mat-header-cell
-                                    *matHeaderCellDef
-                                    width="50"
-                                >
+                                <th mat-header-cell *matHeaderCellDef width="50">
                                     מטופלות
                                 </th>
                                 <td mat-cell *matCellDef="let element">
                                     <div class="example-button-container">
-                                        <button
-                                            (click)="
+                                        <button (click)="
                                                 showPatient(
                                                     PatientModal,
                                                     'PatientDetails',
                                                     element
                                                 )
-                                            "
-                                            class="row-data"
-                                            mat-mini-fab
-                                            color="primary"
-                                        >
+                                            " class="row-data" mat-mini-fab color="primary">
                                             <mat-icon>night_shelter</mat-icon>
                                         </button>
                                     </div>
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="SEND_SMS_PATIENT">
-                                <th
-                                    mat-header-cell
-                                    *matHeaderCellDef
-                                    width="50"
-                                >
+                                <th mat-header-cell *matHeaderCellDef width="50">
                                     שליחת SMS
                                 </th>
                                 <td mat-cell *matCellDef="let element">
                                     <div class="example-button-container">
-                                        <button
-                                        
-                                        *ngIf="element.MaternityStatus == 1"
-                                            (click)="
+                                        <button *ngIf="element.MaternityStatus == 1" (click)="
                                                 SendSmsToPatient(
                                                     SendSmsToPatientModal,
                                                     'SendSmsToPatientDetails',
                                                     element
                                                 )
-                                            "
-                                            class="row-data"
-                                            mat-mini-fab
-                                            color="primary"
-                                        >
+                                            " class="row-data" mat-mini-fab color="primary">
                                             <mat-icon>textsms</mat-icon>
                                         </button>
                                     </div>
                                 </td>
                             </ng-container>
-                            <tr
-                                mat-header-row
-                                *matHeaderRowDef="displayedColumns"
-                            ></tr>
-                            <tr
-                                mat-row
-                                *matRowDef="let row; columns: displayedColumns"
-                            ></tr>
+                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
                         </table>
                     </div>
                     <!-- PAGINATION -->
-                    <mat-paginator
-                        [length]="resultsLength"
-                        [pageSizeOptions]="[5, 10, 20, 50, 100]"
-                        [pageSize]="10"
-                        showFirstLastButtons
-                        (page)="getPaginatorData($event)"
-                    ></mat-paginator>
+                    <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 20, 50, 100]" [pageSize]="10"
+                        showFirstLastButtons (page)="getPaginatorData($event)"></mat-paginator>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<button
-    type="button"
-    id="maternityBtn"
-    (click)="open(maternityModal, 'maternity', '')"
-    mat-fab
-    color="primary"
->
+<button type="button" id="maternityBtn" (click)="open(maternityModal, 'maternity', '')" mat-fab color="primary">
     <i class="material-icons">add</i>
 </button>
 <ng-template #maternityModal let-modal>
-    <form
-        dir="rtl"
-        id="maternityFormID"
-        class="form col"
-        [formGroup]="maternityForm"
-        (ngSubmit)="onSubmit()"
-    >
+    <form dir="rtl" id="maternityFormID" class="form col" [formGroup]="maternityForm" (ngSubmit)="onSubmit()">
         <div class="modal-header text-right">
             <h4 class="modal-title text-center">
                 פרויקט <span class="d-none1">{{ MaternityNumber }}</span> -
                 <span>{{ MaternityName }}</span>
             </h4>
-            <button
-                type="button"
-                class="close"
-                aria-label="Close"
-                (click)="modal.dismiss('Cross click')"
-            >
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
@@ -266,30 +178,16 @@
                 <div class="col">
                     <div class="form-group">
                         <mat-form-field>
-                            <input
-                                matInput
-                                autocomplete="off"
-                                class="form-control"
-                                placeholder="מס' פרויקט"
-                                formControlName="MaternityNumber"
-                                required
-                                type="text"
-                            />
+                            <input matInput autocomplete="off" class="form-control" placeholder="מס' פרויקט"
+                                formControlName="MaternityNumber" required type="text" />
                         </mat-form-field>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
                         <mat-form-field>
-                            <input
-                                matInput
-                                autocomplete="off"
-                                class="form-control"
-                                placeholder="שם פרויקט"
-                                formControlName="MaternityName"
-                                required
-                                type="text"
-                            />
+                            <input matInput autocomplete="off" class="form-control" placeholder="שם פרויקט"
+                                formControlName="MaternityName" required type="text" />
                         </mat-form-field>
                     </div>
                 </div>
@@ -297,16 +195,8 @@
                 <div class="col">
                     <div class="form-group">
                         <mat-form-field>
-                            <input
-                                matInput
-                                autocomplete="off"
-                                class="form-control"
-                                placeholder="עלות הפרויקט"
-                                formControlName="ProjectCost"
-                                required
-                                step="any"
-                                type="number"
-                            />
+                            <input matInput autocomplete="off" class="form-control" placeholder="עלות הפרויקט"
+                                formControlName="ProjectCost" required step="any" type="number" />
                         </mat-form-field>
                     </div>
                 </div>
@@ -317,6 +207,16 @@
                             <mat-select formControlName="MaternityStatus">
                                 <mat-option value="1">פעיל</mat-option>
                                 <mat-option value="0">לא פעיל</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group lh-37">
+                        <mat-form-field>
+                            <mat-label>פרויקט אב</mat-label>
+                            <mat-select formControlName="ParentProject">
+                                <mat-option *ngFor="let proj of ParentProjectsList" [value]="proj.RowID">{{proj.MaternityName}}</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </div>
@@ -333,12 +233,13 @@
     <app-maternitypatients></app-maternitypatients>
 </ng-template>
 
-<ng-template #SendSmsToPatientModal let-modal>  
+<ng-template #SendSmsToPatientModal let-modal>
     <div class="row">
         <div class="col">
-            <h1 ngbAutofocus  dir="rtl" class="text-right w-85-p">שליחת הודעה לפרוייקט - <span>{{MaternityName +" - "+ MaternityNumber}}</span></h1>  
-            <app-sendsmsadmin  (parentFun)="CloseModalSendSms()"></app-sendsmsadmin>
+            <h1 ngbAutofocus dir="rtl" class="text-right w-85-p">שליחת הודעה לפרוייקט - <span>{{MaternityName +" - "+
+                    MaternityNumber}}</span></h1>
+            <app-sendsmsadmin (parentFun)="CloseModalSendSms()"></app-sendsmsadmin>
         </div>
     </div>
-    
+
 </ng-template>
