--- a/src/app/maternity/maternity.component.html
+++ b/src/app/maternity/maternity.component.html
@@ -50,14 +50,14 @@
                                 <input matInput (keyup)="applyFilter($event.target.value)" placeholder="חפש">
                             </mat-form-field> -->
                         <table class="table" mat-table [dataSource]="dataSource">
-                            <ng-container matColumnDef="RowID">
+                            <!-- <ng-container matColumnDef="RowID">
                                 <th mat-header-cell *matHeaderCellDef>
                                     מס' פרויקט
                                 </th>
                                 <td mat-cell *matCellDef="let element">
                                     {{ element.RowID }}
                                 </td>
-                            </ng-container>
+                            </ng-container> -->
                             <ng-container matColumnDef="MaternityNumber">
                                 <th mat-header-cell *matHeaderCellDef>
                                     מזהה פרויקט
@@ -92,8 +92,23 @@
                                     }}
                                 </td>
                             </ng-container>
+                            <ng-container matColumnDef="CLICK_PROJ_CHILD">
+                                <th mat-header-cell *matHeaderCellDef>
+                                    תתי פרויקטים
+                                </th>
+                                <td mat-cell *matCellDef="let element">
+                                    <div class="example-button-container">
+                                        <button class="row-data" mat-mini-fab color="primary" disabled
+                                            (click)="getChildrenProjects(element.RowID)">
+                                            <span class="material-icons">
+                                                view_list
+                                            </span>
+                                        </button>
+                                    </div>
+                                </td>
+                            </ng-container>
                             <ng-container matColumnDef="CLICK">
-                                <th mat-header-cell *matHeaderCellDef width="50">
+                                <th mat-header-cell *matHeaderCellDef>
                                     עריכה
                                 </th>
                                 <td mat-cell *matCellDef="let element">
@@ -112,7 +127,7 @@
                             </ng-container>
 
                             <ng-container matColumnDef="CLICK_PATIENT">
-                                <th mat-header-cell *matHeaderCellDef width="50">
+                                <th mat-header-cell *matHeaderCellDef>
                                     מטופלות
                                 </th>
                                 <td mat-cell *matCellDef="let element">
@@ -130,7 +145,7 @@
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="SEND_SMS_PATIENT">
-                                <th mat-header-cell *matHeaderCellDef width="50">
+                                <th mat-header-cell *matHeaderCellDef>
                                     שליחת SMS
                                 </th>
                                 <td mat-cell *matCellDef="let element">
@@ -159,7 +174,8 @@
         </div>
     </div>
 </div>
-<button type="button" id="maternityBtn" (click)="open(maternityModal, 'maternity', '')" mat-fab color="primary">
+<button type="button" id="maternityBtn" (click)="open(maternityModal, 'maternity', ''); getParentProjects();" mat-fab
+    color="primary">
     <i class="material-icons">add</i>
 </button>
 <ng-template #maternityModal let-modal>
@@ -212,11 +228,17 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="form-group lh-37">
+                    <section class="example-section text-center">
+                        <mat-checkbox class="example-margin" [(ngModel)]="parentCheckBox"
+                            [ngModelOptions]="{standalone: true}" (change)="parentCheckFunc($event.checked)">פרויקט אב?
+                        </mat-checkbox>
+                    </section>
+                    <div class="form-group lh-37" [ngStyle]="{'display': parentCheckBox ? 'none' : 'block' }">
                         <mat-form-field>
-                            <mat-label>פרויקט אב</mat-label>
+                            <mat-label>בחר פרויקט אב</mat-label>
                             <mat-select formControlName="ParentProject">
-                                <mat-option *ngFor="let proj of ParentProjectsList" [value]="proj.RowID">{{proj.MaternityName}}</mat-option>
+                                <mat-option *ngFor="let proj of ParentProjectsList" [value]="proj.RowID">
+                                    {{proj.MaternityName}}</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </div>
@@ -224,7 +246,7 @@
             </div>
         </div>
         <div class="modal-footer text-left">
-            <button type="submit" class="btn btn-outline-dark">שמור</button>
+            <button type="submit" class="btn btn-outline-dark" [disabled]="!maternityForm.valid">שמור</button>
         </div>
     </form>
 </ng-template>
