--- a/src/app/manage-clinic-price/manage-clinic-price.component.html
+++ b/src/app/manage-clinic-price/manage-clinic-price.component.html
@@ -122,6 +122,17 @@
                                         </td>
                                     </ng-container>
 
+                                    <ng-container matColumnDef="price">
+                                        <th mat-header-cell *matHeaderCellDef style="text-align: center;"> מחיר יחידה
+                                        </th>
+                                        <td mat-cell *matCellDef="let element" [formGroupName]="element.value">
+                                            <mat-form-field class="text-center">
+                                                <mat-label>מחיר יחידה</mat-label>
+                                                <input matInput formControlName="ServicePrice" type="text">
+                                            </mat-form-field>
+                                        </td>
+                                    </ng-container>
+
                                     <ng-container matColumnDef="quantity">
                                         <th mat-header-cell *matHeaderCellDef style="text-align: center;"> כמות </th>
                                         <td mat-cell *matCellDef="let element" [formGroupName]="element.value">
@@ -150,8 +161,9 @@
                         <button mat-raised-button matStepperNext>הבא</button>
                     </div>
                     <mat-chip-list aria-label="Dog selection">
-                        <mat-chip *ngFor="let service of displayArr.value" >
-                            <b (click)="applyFilter($event,service.ServiceName)">{{service.ServiceName}}</b>  -  "כמות":<b>{{service.ServiceQuantity}}</b>
+                        <mat-chip *ngFor="let service of displayArr.value">
+                            <b (click)="applyFilter($event,service.ServiceName)">{{service.ServiceName}}</b> -
+                            "כמות":<b>{{service.ServiceQuantity}}</b>
                         </mat-chip>
                     </mat-chip-list>
                 </form>
