--- a/src/app/maternity/maternity.component.html
+++ b/src/app/maternity/maternity.component.html
@@ -98,8 +98,8 @@
                                 </th>
                                 <td mat-cell *matCellDef="let element">
                                     <div class="example-button-container">
-                                        <button class="row-data" mat-mini-fab color="primary" disabled
-                                            (click)="getChildrenProjects(element.RowID)">
+                                        <button class="row-data" mat-mini-fab color="primary"
+                                            (click)="open(subProjects, 'maternity', element.MaternityName); getChildrenProjects(element.RowID)">
                                             <span class="material-icons">
                                                 view_list
                                             </span>
@@ -178,6 +178,45 @@
     color="primary">
     <i class="material-icons">add</i>
 </button>
+
+<ng-template #subProjects let-modal>
+    <form dir="rtl" id="maternityFormID" class="form col" [formGroup]="maternityForm">
+        <div class="modal-header text-right">
+            <h4 class="modal-title text-center"><span class="d-none1">תתי פרויקטים של - </span><span>{{ ParentProjectName
+                    }}</span>
+            </h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <table class="table" dir="rtl">
+                <thead>
+                    <tr>
+                        <th scope="col">תיאור פרויקט</th>
+                        <th scope="col">עלות</th>
+                        <th scope="col">עריכה</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let subProj of ChildrenProjectsList">
+                        <td>{{subProj.MaternityName}}</td>
+                        <td>{{subProj.ProjectCost}}</td>
+                        <td>
+                            <div class="example-button-container">
+                                <button class="row-data" mat-mini-fab color="primary"
+                                    (click)="editRow(maternityModal,'subProjEdit',subProj); getParentProjects();">
+                                    <mat-icon>create</mat-icon>
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </form>
+</ng-template>
+
 <ng-template #maternityModal let-modal>
     <form dir="rtl" id="maternityFormID" class="form col" [formGroup]="maternityForm" (ngSubmit)="onSubmit()">
         <div class="modal-header text-right">
