--- a/src/app/maternity/maternity.component.css
+++ b/src/app/maternity/maternity.component.css
@@ -24,3 +24,22 @@ thead{
 tbody{
     text-align: center;
 }
+p{
+    text-align: center;
+}
+.mat-card{
+    padding-bottom: 10px;
+    box-shadow: 0px 3px 8px 0px;
+}
+mat-card{
+    margin-bottom: 10px;
+}
+.list-of-new{
+    height: 727px;
+    border: #adad87 2px solid;
+    border-radius: 14px;
+    overflow: auto;
+}
+#alertIcon{
+    cursor: pointer;
+}
