--- a/src/app/maternity/maternity.component.html
+++ b/src/app/maternity/maternity.component.html
@@ -5,7 +5,7 @@
             <div class="container-fluid" dir="rtl">
                 <div class="row" style="justify-content: center;">
                     <h4 class="text-center">
-                        <b>{{NewPatientsAlertList.length}} יולדות</b>
+                        <b>{{NewPatientsAlertList.length}} יולדות במחלקה</b>
                     </h4>
                     <div class="list-of-new">
                         <mat-card *ngFor="let newOne of NewPatientsAlertList">
