--- a/src/app/employees-manage-dash/employees-add-update/employees-add-update.component.html
+++ b/src/app/employees-manage-dash/employees-add-update/employees-add-update.component.html
@@ -80,7 +80,8 @@
                             </li>
                             <li class="border-me col-4">
                                 <div class="col-12 text-right">
-                                    <label class="exp-label" [ngStyle]="{'color':this.employeePersonalDetails.get('Gender').value === null ? 'red' : 'black' }">מגדר</label>
+                                    <label class="exp-label"
+                                        [ngStyle]="{'color':this.employeePersonalDetails.get('Gender').value === null ? 'red' : 'black' }">מגדר</label>
                                     <mat-select formControlName="Gender" aria-placeholder="מגדר">
                                         <mat-option value="Male"> זכר </mat-option>
                                         <mat-option value="Female"> נקבה </mat-option>
@@ -353,8 +354,7 @@
                             <li class="border-me col-3">
                                 <div class="col-12 text-right">
                                     <label class="exp-label">מבצע תורנויות</label>
-                                    <mat-select formControlName="Toranot"
-                                        aria-placeholder="מבצע תורנויות">
+                                    <mat-select formControlName="Toranot" aria-placeholder="מבצע תורנויות">
                                         <mat-option value="כן"> כן </mat-option>
                                         <mat-option value="לא"> לא </mat-option>
                                     </mat-select>
@@ -380,10 +380,11 @@
 
                 <div class="button-row">
                     <button class="submitBtn mb-2 mt-3" matTooltip="שמירה" [disabled]="employeePersonalDetails.invalid"
-                        (click)="saveEmployee()" color="primary" type="submit" mat-fab>
-                        <span class="material-icons">
+                        (click)="saveEmployee()" [disabled]="saveBtnWait" color="primary" type="submit" mat-fab>
+                        <span *ngIf="!saveBtnWait" class="material-icons">
                             save
                         </span>
+                        <p *ngIf="saveBtnWait" style="font-size: 16px;">המתן..</p>
                     </button>
                 </div>
             </mat-step>
